[gd_scene load_steps=2 format=2]

[ext_resource path="res://DragableSprite/DragableSprite.gd" type="Script" id=1]

[node name="DragableSprite" type="Area2D"]
script = ExtResource( 1 )
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
